update halaman film index

--- a/film/templates/film/index.html
+++ b/film/templates/film/index.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %}
+
+{% block contents %}
+	<h2>Film Terbaru</h2>
+	<ul>
+		<li>Naruto</li>
+		<li>Captain Tsubasa</li>
+		<li>Dragon Ball Z</li>
+		<li>Shinchan</li>
+	</ul>
+{% endblock contents %}
