--- a/film/static/film/css/style.css
+++ b/film/static/film/css/style.css
@@ -1,5 +1,5 @@
 .add-post {
-	float: right;
+	padding-bottom: 25px;
 }
 .add-post h2 {
 	font-weight: lighter;
@@ -7,5 +7,29 @@
 .add-post h2 a {
 	text-decoration: none;
 	color: blue;
+	font-size: 15px;
+}
+
+h3 {
+	font-weight: bolder;
+}
+h4 {
+	font-weight: lighter;
+	margin-top: 5px;
+}
+h5 {
+	font-weight: lighter;
 	font-size: 13px;
+}
+h5 b {
+	color: blue;
+}
+a {
+	text-decoration: none;
+	color: blue;
+}
+p {
+	margin-top: 10px;
+	padding:0 15px;
+	font-size: 15px;
 }
