--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,10 @@
 	</div>
 	<div class="container">
 		<div class="contents">
+			{% block addPost %}
+				
+			{% endblock addPost %}
+			
 			{% block contents %}
 				
 			{% endblock contents %}
