--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,10 @@
 			{% block addPost %}
 				
 			{% endblock addPost %}
+
+			{% block category %}
+				
+			{% endblock category %}
 			
 			{% block contents %}
 				
