--- a/film/templates/film/index.html
+++ b/film/templates/film/index.html
@@ -2,7 +2,7 @@
 
 {% block addPost %}
 	<div class="add-post">
-		<h2><a href="{% url 'film:index' %}">Add Post</a></h2>
+		<h2><a href="{% url 'film:addpost' %}">Add Post</a></h2>
 	</div>
 {% endblock addPost %}
 
