--- a/film/templates/film/add_post.html
+++ b/film/templates/film/add_post.html
@@ -4,7 +4,7 @@
 	<form method="POST">
 		{% csrf_token %}
 		<table>
-			{{addform.as_tablel}}
+			{{addform.as_table}}
 		</table>
 		<button type="submit">Posting</button>
 	</form>
