--- a/film/static/film/css/style.css
+++ b/film/static/film/css/style.css
@@ -1,5 +1,5 @@
 .add-post {
-	padding-bottom: 25px;
+	padding-bottom: 10px;
 }
 .add-post h2 {
 	font-weight: lighter;
@@ -10,12 +10,14 @@
 	font-size: 15px;
 }
 .category h4{
-	margin-bottom: 15px;
+	margin-bottom: 14px;
+	color: blue;
 	font-weight: bolder;
 }
 
 h3 {
 	font-weight: bolder;
+	color: blue;
 }
 h4 {
 	font-weight: lighter;
@@ -40,4 +42,7 @@ p {
 ul li {
 	display: inline-block;
 	padding-right: 10px;
+}
+ul li a {
+	font-size: 12px;
 }
