--- a/film/templates/film/detail_post.html
+++ b/film/templates/film/detail_post.html
@@ -9,7 +9,7 @@
 {% block contents %}
 	<ul>
 		<li>
-			<a href="{% url 'film:index' %}">All Post</a>
+			<a href="{% url 'film:index' %}"><b>All Post</b></a>
 		</li>
 		{% for data_category in categorys %}
 			<li>
