--- a/film/templates/film/add_post.html
+++ b/film/templates/film/add_post.html
@@ -2,7 +2,7 @@
 
 {% block addPost %}
 	<div class="add-post">
-		<h3>Tambah Postingan</h3>
+		<h3><a href="{% url 'film:index' %}">Beranda</a></h3>
 	</div>
 {% endblock addPost %}
 
