--- a/film/templates/film/detail_post.html
+++ b/film/templates/film/detail_post.html
@@ -22,13 +22,8 @@
 	<h4>{{posts.publish}}</h4>
 	<h5><b>Category : </b>{{posts.category}}</h5>
 	<p>{{posts.body}}</p>
-
-	<form class="comment-post" method="POST">
-		{% csrf_token %}
-		<table>
-			{{commentform.as_table}}
-		</table>
-		<br>
-		<button type="submit">Komentari</button>
-	</form>
+	<br>
+	<div class="add_comment">
+		<h4><a href="#">Tambah Komentar</a></h4>
+	</div>
 {% endblock contents %}
