--- a/film/templates/film/category_post.html
+++ b/film/templates/film/category_post.html
@@ -24,5 +24,8 @@
 		<h5><b>Category : </b>{{post.category}}</h5>
 		<p>{{post.body | truncatechars:150}}</p>
 		<br>
+		<div class="add_comment">
+			<h4><a href="#">Tambah Komentar</a></h4>
+		</div>
 	{% endfor %}
 {% endblock contents %}
