--- a/film/static/film/css/style.css
+++ b/film/static/film/css/style.css
@@ -1,3 +1,21 @@
+.beranda {
+	background: blue;
+	width: 200px;
+	height: auto;
+	border-radius: 5px;
+	margin-bottom: 15px;
+}
+.beranda .btn-beranda {
+	padding: 15px 0px;
+	text-align: center;
+}
+.beranda h3 {
+	font-weight: bolder;
+}
+.beranda h3 a {
+	text-decoration: none;
+	color: yellow;
+}
 .add-post {
 	padding-bottom: 10px;
 }
@@ -40,7 +58,7 @@
 	font-weight: bolder;
 }
 form {
-	padding: 25px 30px;
+	padding: 15px 30px;
 }
 .form-field {
 	background: yellow;
@@ -53,8 +71,6 @@ form {
 	padding: 20px 0;
 }
 .form-field button {
-	margin-top: 35px;
-	float: right;
 	padding: 10px 20px;
 	border: 1px solid yellow;
 	background: blue;
