--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@
 	text-decoration: none;
 	color: blue;
 }
-.header .nav {
+/*.header .nav {
 	float: right;
 }
 .header .nav ul {
@@ -34,7 +34,7 @@
 .header .nav ul li a {
 	text-decoration: none;
 	color: blue;
-}
+}*/
 .container {
 	width: 100%;
 	height: auto;
@@ -43,4 +43,88 @@
 	width: 80%;
 	margin: auto;
 	padding-top: 15px;
+}
+.landing {
+	margin: 100px auto;
+	width: 450px;
+	height: 400px;
+	border: 2px solid blue;
+}
+.landing .button {
+	margin-top: 73%;
+}
+.landing h2 {
+	text-transform: uppercase;
+	background: yellow;
+	text-align: center;
+	width: 200px;
+	padding: 15px 20px;
+	margin: auto;
+	border-radius: 10px;
+	color: blue;
+	font-weight: bolder;
+}
+.landing h2 a {
+	text-decoration: none;
+}
+.landing h2 a:hover {
+	border-top: 1px solid blue;
+	border-bottom: 1px solid blue;
+	padding: 7px 0;
+	transition: .5s;
+}
+
+/*help css*/
+.help {
+		margin: 100px auto;
+		width: 450px;
+		height: 400px;
+		border: 2px solid blue;
+}
+.help h2 {
+	text-transform: uppercase;
+	text-align: center;
+	padding: 15px 20px;
+	margin: auto;
+	color: blue;
+	font-weight: lighter;
+}
+.help p {
+	padding: 0 15px;
+	font-size: 13px;
+}
+
+
+/*footer css*/
+.footer {
+	width: 50%;
+	background: yellow;
+	height: auto;
+	margin: auto;
+	border-bottom: 2px solid blue;
+}
+.footer .logo {
+	text-align: center;
+}
+.footer h2 {
+	padding: 10px 0;
+	text-transform: uppercase;
+}
+.footer p {
+	float: right;
+	margin-top: 14px;
+}
+.footer	ul {
+	margin: 15px 0;
+	float: left;
+}
+.footer ul li {
+	list-style: none;
+	margin-top: 5px;
+	padding-right: 45px;
+}
+.footer .list a {
+	font-size: 13px;
+	color: blue;
+	text-decoration: none;
 }
